--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Spin the Wheel</title>
-  <script src="script.js"></script>
-</head>
-<body>
-  <h1>Spin the Wheel</h1>
-  <button id="spinButton" onclick="spinWheel()">Spin</button>
-  <div id="result"></div>
-</body>
-</html>
+<head></head>
+  <h1> Welcome to money or life</h1>
+  
+<h2>account</h2>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+      
+      <label for="name">age:</label>
+      <input type="text" id="name" name="name" required>
+      <footer>
+       <button type="submit">Submit</button>
+      
+  </main>
+  
+
+
+  
 
