--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-  <h1> Welcome to money or life</h1>
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Animated Text</title>
+  <style>
+    @keyframes animatedText {
+      0% { opacity: 0; transform: translateY(100px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .animated-text {
+      font-family: Arial, sans-serif;
+      font-size: 24px;
+      animation-name: animatedText;
+      animation-duration: 2s;
+      animation-timing-function: ease-in-out;
+      animation-iteration-count:;
+      animation-direction: alternate;
+    }
+  </style>
+</head>
+<body>
+  <div class="animated-text"><h2>money or life</h2></div>
+</body>
+</html>
   
 <h2>account</h2>
     <form>
