--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: Arial, sans-serif;
       font-size: 24px;
       animation-name: animatedText;
-      animation-duration: 2s;
+      animation-duration: 3s;
       animation-timing-function: ease-in-out;
       animation-iteration-count:;
       animation-direction: alternate;
@@ -36,9 +36,14 @@
       <label for="name">age:</label>
       <input type="text" id="name" name="name" required>
       <footer>
-       <button type="submit">Submit</button>
-      
+       <a href="spin.html">
+    <button>next</button>
+   
   </main>
+  
+
+  
+ 
   
 
 
