--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <label for="name">age:</label>
       <input type="text" id="name" name="name" required>
       <footer>
-       <a href="spin.html">
-    <button>next</button>
+        <li><a href="spin.html">next</a></li>
+   
    
   </main>
   
