--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
       
       <label for="name">age:</label>
       <input type="text" id="name" name="name" required>
-      <footer>
+      
         <li><a href="spin.html">next</a></li>
+                 <footer>
+                   </h1> made by moonligth.pr</h1>
+  
    
    
   </main>
